--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
