--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ node_modules
 dist
 dist-ssr
 *.local
-.env
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# .gitignore
+
+# Ignore .env files
+.env
